--- a/README.Rmd
+++ b/README.Rmd
@@ -11,10 +11,10 @@ knitr::opts_chunk$set(
 )
 ```
 
-# precommits
+# PreCommits
 
 <!-- badges: start -->
 <!-- badges: end -->
 
-The goal of precommits is to ...
+This is work in progress. Please come back later.
 
