--- a/README.Rmd
+++ b/README.Rmd
@@ -11,10 +11,10 @@ knitr::opts_chunk$set(
 )
 ```
 
-# PreCommits
+# PreCommits 
 
 <!-- badges: start -->
 <!-- badges: end -->
 
-This is work in progress. Please come back later.
+This is work in progress.
 
